# lookas

./: .env.examples  .gitignore  README.md  config.py  db.py  main.py  orders.db  provider_handler.py  pyproject.toml  render.yaml  requirements.txt  research_agent.py  web.py
notebook/: agent_res.ipynb  opencode_test.ipynb  orders.ipynb  research_agent.ipynb  wikipedia.ipynb
requester/: main.py
