[project]
name = "pyrmyd2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "croo-sdk>=0.2.1",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.8",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "wikipedia-api>=0.15.0",
]
